<resources>
    <string name="app_name">My Application</string>
    <string name="open_string">Open</string>
    <string name="close_string">Close</string>
    <string name="NewlyAdded">Недавно добавленные</string>
    <string name="MostBuyed">Самые продаваемые</string>
    <string name="MostDiscounted">Самые выгодные</string>
    <string name="nav_Main">Главная</string>
    <string name="nav_Smartphone">Смартфоны</string>
    <string name="nav_Notebook">Ноутбуки</string>
    <string name="nav_Wire">Беспр наушники</string>
    <string name="nav_Wireless">Пров. наушники</string>
    <string name="nav_Accessory">Аксессуары</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RamCountTitle">RAM Count</string>
    <string name="WeightTitle">Weight</string>
    <string name="HDDSizeTitle">HDD memory</string>
    <string name="SSDSizeTitle">SSD memory</string>
    <string name="ScreenSizeTitle">Screen size</string>
    <string name="ScreenResolutionTitle">Screen resolution</string>
    <string name="CameraTitle">Camera</string>
    <string name="WirelessCommunicationTitle">Wireless communication</string>
    <string name="BatteryCapacityTitle">Battery capacity</string>
    <string name="OutputsTitle">Outputs</string>
    <string name="OptionalTitle">Optional</string>
    <string name="OSTitle">OS</string>
    <string name="VideocardTitle">Videocard</string>
    <string name="ProcessorTitle">Processor</string>
    <string name="ScreenTypeTitle">Screen type</string>
    <string name="TypeTitle">Type</string>
    <string name="BrandTitle">Brand</string>
    <string name="ColorTitle">Color</string>
    <string name="ChargingTypeTitle">Charging type</string>
    <string name="CommunicationTitle">Communication</string>
    <string name="NFCTitle">NFC</string>
    <string name="PhoneSizeTitle">Phone size</string>
    <string name="MemoryCountTitle">Memory count</string>
    <string name="RadiusTitle">Radius</string>
    <string name="BatteryTitle">Battery</string>
    <string name="CaseBatteryTitle">Case Battery</string>
    <string name="WireLengthTitle">wire length</string>
    <string name="ConnectionTypeTitle">ConnectionType</string>

    <string name="CartAddFailed">Cannot add product to Cart</string>
    <string name="CartAddSuccess">Product added to Cart</string>
    <string name="NotInStock">Not in stock</string>

    <string name="WrongLoginPassword">Wrong login or password.</string>
    <string name="AlreadySignIn">You are already signIn</string>
    <string name="SignInRequired">This option accessible only for signIn user</string>
    <string name="UserExists">User with current name is already exists</string>

    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="SignIn">SignIn</string>

    <string name="RegName">Nickname</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">password</string>
    <string name="regConfPassword">Confirm password</string>
    <string name="regButton">Registration</string>
</resources>