<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawer"
    tools:context=".View.MainActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MainActivity"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/NewlyAdded"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:id="@+id/NewlyAdded"
            android:scrollbars="horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MostBuyed"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/MostBuyed"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MostDiscounted"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/MostDiscounted"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationid"
        app:menu="@menu/navigation_drawer"
        android:background="#ffffff"
        android:layout_gravity="start" />
</androidx.drawerlayout.widget.DrawerLayout>